SimGrid (3.31.1) NOT RELEASED YET (v3.32 expected June 21. 2022, 09:13 UTC)

----------------------------------------------------------------------------

S4U:
 - kill Comm::on_completion that was not working anyway.

SimGrid (3.31) March 22. 2022.

The ненасильство release. We stand against war.

Against the agression by a sick system that forces peoples to take arms against each other.


MC:
 - Rework the internals, for simpler and modern code. This shall unlock many future improvements.
 - You can now define plugins onto the DFS explorer (previously called SafetyChecker), using the
   declared signals. See CommunicationDeterminism for an example.
 - Support mutex, semaphore and barrier in DPOR reduction
 - Seems to work on Arm64 architectures too.
 - Display a nice error message when ptrace is not usable.
 - New test suite, imported from the MPI Bugs Initiative (MBI). Not all MBI generators are integrated yet.
 - Remove the ISP test suite: it's not free software, and it's superseeded by MBI.

SMPI:
 - fix for FG#100 by ensuring small asynchronous messages never overtake larger
   ones, conforming to the standard.
 - replay: fix waitall behaviour to avoid forgetting requests and leaking
   their handles.
 - tracing: ensure that we dump the TI traces continuously during execution and
   not just at the end, reducing memory cost and performance hit.
 - Update OpenMPI collectives selection logic to match current one (4.1.2)
 - Add a coherence check for collective operation order and root/MPI_Op
   coherence. Potentially costly so not activated unless smpi:pendantic is set
   or -analyze is given.

S4U:
 - New signal: Engine::on_simulation_start_cb()
 - Introduce a new execution mode with this_actor::thread_execute(). This simulate
   the execution of a certain amount of flops by multiple threads ran by a host. Each
   thread executes the same number of flops, given as argument. An example of this new
   function can be found in examples/cpp/exec-threads.