@@ -91,9 +91,6 @@ public:
   friend XBT_PUBLIC void intrusive_ptr_add_ref(ActivityImpl* activity);
   friend XBT_PUBLIC void intrusive_ptr_release(ActivityImpl* activity);
   int get_refcount() const { return static_cast<int>(refcount_); } // For debugging purpose
-
-  static xbt::signal<void(ActivityImpl const&)> on_suspended;
-  static xbt::signal<void(ActivityImpl const&)> on_resumed;
 };
 
 /* This class exists to allow chained setters as in exec->set_name()->set_priority()->set_blah()
