@@ -3,7 +3,8 @@ SimGrid (3.31.1) NOT RELEASED YET (v3.32 expected June 21. 2022, 09:13 UTC)
 ----------------------------------------------------------------------------
 
 S4U:
- - kill Comm::on_completion that was not working anyway.
+ - kill signal Comm::on_completion that was not working anyway.
+ - Expose signals Activity::on_suspend and Activity::on_resume
 
 SimGrid (3.31) March 22. 2022.
 
